# QSimpleUpdater

./: CMakeLists.txt
src/: Updater.cpp  Updater.h
